src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__perform_qualified.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_fiber: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: Some(
                    EffectRow {
                        kind: Effects {
                            effects: [
                                Type {
                                    kind: Path(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 2,
                                                        },
                                                        span: Span {
                                                            start: 10,
                                                            end: 15,
                                                            start_line: 1,
                                                            start_col: 11,
                                                        },
                                                    },
                                                    args: Some(
                                                        TypeArgs {
                                                            args: [
                                                                Type(
                                                                    Type {
                                                                        kind: Path(
                                                                            TypePath {
                                                                                segments: [
                                                                                    TypePathSegment {
                                                                                        name: Spanned {
                                                                                            node: SymbolU32 {
                                                                                                value: 3,
                                                                                            },
                                                                                            span: Span {
                                                                                                start: 16,
                                                                                                end: 19,
                                                                                                start_line: 1,
                                                                                                start_col: 17,
                                                                                            },
                                                                                        },
                                                                                        args: None,
                                                                                    },
                                                                                ],
                                                                                span: Span {
                                                                                    start: 16,
                                                                                    end: 19,
                                                                                    start_line: 1,
                                                                                    start_col: 17,
                                                                                },
                                                                            },
                                                                        ),
                                                                        span: Span {
                                                                            start: 16,
                                                                            end: 19,
                                                                            start_line: 1,
                                                                            start_col: 17,
                                                                        },
                                                                    },
                                                                ),
                                                            ],
                                                            span: Span {
                                                                start: 15,
                                                                end: 20,
                                                                start_line: 1,
                                                                start_col: 16,
                                                            },
                                                        },
                                                    ),
                                                },
                                            ],
                                            span: Span {
                                                start: 10,
                                                end: 20,
                                                start_line: 1,
                                                start_col: 11,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 10,
                                        end: 20,
                                        start_line: 1,
                                        start_col: 11,
                                    },
                                },
                            ],
                            rest: None,
                        },
                        span: Span {
                            start: 9,
                            end: 21,
                            start_line: 1,
                            start_col: 10,
                        },
                    },
                ),
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Perform {
                                    effect: Some(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 2,
                                                        },
                                                        span: Span {
                                                            start: 32,
                                                            end: 37,
                                                            start_line: 1,
                                                            start_col: 33,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 32,
                                                end: 37,
                                                start_line: 1,
                                                start_col: 33,
                                            },
                                        },
                                    ),
                                    operation: Spanned {
                                        node: SymbolU32 {
                                            value: 4,
                                        },
                                        span: Span {
                                            start: 38,
                                            end: 41,
                                            start_line: 1,
                                            start_col: 39,
                                        },
                                    },
                                    args: [],
                                },
                                span: Span {
                                    start: 24,
                                    end: 43,
                                    start_line: 1,
                                    start_col: 25,
                                },
                            },
                        ),
                        span: Span {
                            start: 22,
                            end: 45,
                            start_line: 1,
                            start_col: 23,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 45,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 45,
        start_line: 1,
        start_col: 1,
    },
}
