src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__perform_simple.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: Some(
                    EffectRow {
                        kind: Effects {
                            effects: [
                                Type {
                                    kind: Path(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 2,
                                                        },
                                                        span: Span {
                                                            start: 10,
                                                            end: 17,
                                                            start_line: 1,
                                                            start_col: 11,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 10,
                                                end: 17,
                                                start_line: 1,
                                                start_col: 11,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 10,
                                        end: 17,
                                        start_line: 1,
                                        start_col: 11,
                                    },
                                },
                            ],
                            rest: None,
                        },
                        span: Span {
                            start: 9,
                            end: 18,
                            start_line: 1,
                            start_col: 10,
                        },
                    },
                ),
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Perform {
                                    effect: None,
                                    operation: Spanned {
                                        node: SymbolU32 {
                                            value: 3,
                                        },
                                        span: Span {
                                            start: 29,
                                            end: 34,
                                            start_line: 1,
                                            start_col: 30,
                                        },
                                    },
                                    args: [
                                        Expr {
                                            kind: Literal(
                                                Literal {
                                                    kind: String(
                                                        "hello",
                                                    ),
                                                    span: Span {
                                                        start: 35,
                                                        end: 42,
                                                        start_line: 1,
                                                        start_col: 36,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 35,
                                                end: 42,
                                                start_line: 1,
                                                start_col: 36,
                                            },
                                        },
                                    ],
                                },
                                span: Span {
                                    start: 21,
                                    end: 43,
                                    start_line: 1,
                                    start_col: 22,
                                },
                            },
                        ),
                        span: Span {
                            start: 19,
                            end: 45,
                            start_line: 1,
                            start_col: 20,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 45,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 45,
        start_line: 1,
        start_col: 1,
    },
}
